fixing company icon sizing issues on safari mobile

--- a/components/new/JobDetails.module.css
+++ b/components/new/JobDetails.module.css
@@ -1,10 +1,11 @@
 .jobs_wrapper {
   z-index: 999;
   width: 100%;
+  /* height: 100%; */
   position: relative;
   /* margin-top: 5vh; */
   border-radius: 10px;
-  margin-bottom: 2vw;
+  margin-bottom: 30px;
   transition: 0.1s;
   display: flex;
   flex-direction: row;
@@ -91,7 +92,8 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
-  height: 100%;
+  height: inherit;
+  padding: 20%;
   width: 100%;
 }
 
@@ -104,7 +106,6 @@
   margin: 0 auto;
   height: auto;
   align-items: center;
-  padding: 20px;
   z-index: 0;
   position: relative;
   left: 0;
